[package]
name = "zkp-chaum-pedersen"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
num-traits = "0.2"
num-bigint = { version = "0.4", features = ["rand"] }
tonic = "0.11"
prost = "0.12"
tokio = {version = "1.38", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"